Further bug fixes, rename label

--- a/RayshiftTranslateFGO/AppResources.fr.resx
+++ b/RayshiftTranslateFGO/AppResources.fr.resx
@@ -142,7 +142,7 @@
     <value>Préférences</value>
   </data>
   <data name="AboutTitle3" xml:space="preserve">
-    <value>Autres</value>
+    <value>Informations</value>
   </data>
   <data name="AboutVisitText" xml:space="preserve">
     <value>Visitez rayshift.io pour plus d'informations.</value>
