--- a/RayshiftTranslateFGO/AppResources.pt-BR.resx
+++ b/RayshiftTranslateFGO/AppResources.pt-BR.resx
@@ -142,7 +142,7 @@
     <value>Preferências</value>
   </data>
   <data name="AboutTitle3" xml:space="preserve">
-    <value>Outros</value>
+    <value>Informações</value>
   </data>
   <data name="AboutVisitText" xml:space="preserve">
     <value>Visite rayshift.io para mais informações.</value>
