--- a/RayshiftTranslateFGO/AppResources.resx
+++ b/RayshiftTranslateFGO/AppResources.resx
@@ -142,7 +142,7 @@
     <value>Preferences</value>
   </data>
   <data name="AboutTitle3" xml:space="preserve">
-    <value>Other</value>
+    <value>Information</value>
   </data>
   <data name="AboutVisitText" xml:space="preserve">
     <value>Visit rayshift.io for more information.</value>
