--- a/RayshiftTranslateFGO/AppResources.es.resx
+++ b/RayshiftTranslateFGO/AppResources.es.resx
@@ -142,7 +142,7 @@
     <value>Preferencias</value>
   </data>
   <data name="AboutTitle3" xml:space="preserve">
-    <value>Otro</value>
+    <value>Información</value>
   </data>
   <data name="AboutVisitText" xml:space="preserve">
     <value>Visita rayshift.io para más información.</value>
