--- a/RayshiftTranslateFGO/AppResources.id.resx
+++ b/RayshiftTranslateFGO/AppResources.id.resx
@@ -142,7 +142,7 @@
     <value>Preferensi</value>
   </data>
   <data name="AboutTitle3" xml:space="preserve">
-    <value>Lain-lain</value>
+    <value>Informasi</value>
   </data>
   <data name="AboutVisitText" xml:space="preserve">
     <value>Kunjungi rayshift.io untuk informasi lebih lanjut.</value>
